# bioinformatics-backend

./: Dockerfile  IIME.py  flask_api.py  setup.txt  setup_new.txt
charmm_dat/: all_pmuta.rtf  toppar.str
charmm_program/charmm/: .gitignore  CMakeLists.txt  configure  install.com
charmm_program/charmm/ChangeLogs/: ChangeLog.c44  ChangeLog.c45  ChangeLog.c46  ChangeLog.c47  ChangeLog.c48  ChangeLog.c49
charmm_program/charmm/doc/: blade.info  block.info  cadpac.info  changelog.info  cmake.info  commands.info  cons.info  corman.info  correl.info  corsol.info  crystl.info  dcm.info  dims.info  drude.info  dynamc.info  eef1.info  extbond.info  facts.info  fftdock.info  fullkern.info  gamess.info  grid.info  images.info  install.info  intcor.info  io.info  lonepair.info  minimiz.info  mlpot.info  mmfp.info  mmpt.info  mndo97.info  mobhy.info  msmmpt.info  nbonds.info  nmr.info  openmm.info  openmm_dock.info  pert.info  pnm.info  (+13 more)
charmm_program/charmm/source/adumb/: umb.F90
charmm_program/charmm/source/api/: api_charmm_file.F90  api_cons_fix.F90  api_cons_harm.F90  api_coor.F90  api_crystal.F90  api_custom.F90  api_dataframe.F90  api_dynamics.F90  api_energy.F90  api_eval.F90  api_func.F90  api_generate.F90  api_grid.F90  api_ic.F90  api_image.F90  api_init.F90  api_ktable.F90  api_lambdata.F90  api_minimize.F90  api_msldata.F90  api_nbonds.F90  api_omm.F90  api_param.F90  api_pbound.F90  api_psf.F90  api_read.F90  api_scalar.F90  api_select.F90  api_shake.F90  api_stream.F90  api_types.F90  api_util.F90  api_velos.F90  api_write.F90
charmm_program/charmm/source/blade/src/: CMakeLists.txt
charmm_program/charmm/source/blade/src/nbdirect/: ._nbdirectslower.txt
charmm_program/charmm/source/blade/src/xdr/: ._README
charmm_program/charmm/source/blade_api/: blade.F90  blade_block.F90  blade_coords.F90  blade_ctrl.F90  blade_dynopts.F90  blade_main.F90  blade_options.F90  blade_param.F90  blade_psf.F90  dynamics.cxx
charmm_program/charmm/source/cff/: parrdr_cff.F90
charmm_program/charmm/source/charmm/: charmm_main.F90  iniall.F90  miscom.F90
charmm_program/charmm/source/correl/: anacor.F90  ancsol.F90  correl.F90  corrio.F90  rdfsol.F90
charmm_program/charmm/source/domdec/: Bonded.cu  Bonded.h  MDsim.cu  MDsim.h  NBdirect.cu  NBdirect.h  NBrecip.cu  NBrecip.h  Nlist.cu  Nlist.h  bonded_gpu.cu  bonded_gpu_mod.F90  domdec.F90  domdec_aniso.F90  domdec_block.F90  domdec_bonded.F90  domdec_bonded_block.F90  domdec_cons.F90  (+49 more)
charmm_program/charmm/test/: parallel-tests  test.com
charmm_program/charmm/tool/: config.py  gmscomp  install.com  makemod.pl  preflx3
scripts/: cleanup.py  error_handle.py  greeting.py  heatmap.py  ligand_prep.py  prepare_pdb.py  residue_detection.py  step1.py  step2.py  step3_gbmv.py  step3_inte.py  terminal_remover.py
(+643 files in other folders)
